name:                prochpc
version:             0.1.0.0
synopsis:            process HPC output
license:             MIT
license-file:        LICENSE
author:              Alexander Diemand
maintainer:
copyright:           2018 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

executable prochpc
  main-is:             ProcHPC.hs
  default-language:    Haskell2010
  ghc-options:         -main-is ProcHPC -threaded -Wall -O2 "-with-rtsopts=-T"
  build-depends:       base,
                       async,
                       bytestring,
                       html-conduit,
                       mtl,
                       text,
                       unix,
                       xml-conduit
