cabal-version:       2.0
name:                lobemo-backend-editor
version:             0.1.0.0
synopsis:            provides a backend implementation to interactively manage configuration
-- description:
homepage:            https://github.com/input-output-hk/iohk-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Cardano.BM.Backend.Editor
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       iohk-monitoring,
                       aeson,
                       async,
                       bytestring,
                       directory,
                       filepath,
                       safe,
                       safe-exceptions,
                       text,
                       time,
                       threepenny-gui,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  hs-source-dirs:      src
  default-language:    Haskell2010
