cabal-version:       2.0
name:                lobemo-backend-prometheus
version:             0.1.0.0
synopsis:            provides a backend implementation to Prometheus
-- description:
homepage:            https://github.com/input-output-hk/iohk-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Cardano.BM.Backend.Prometheus
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       iohk-monitoring,
                       lobemo-backend-ekg,
                       prometheus == 2.1.2,
                       ekg-prometheus-adapter,
                       async,
                       ekg,
                       warp
  hs-source-dirs:      src
  default-language:    Haskell2010
