cabal-version:       2.0
name:                lobemo-scribe-systemd
version:             0.1.0.0
synopsis:            provides a backend for logging to systemd/journal
-- description:
homepage:            https://github.com/input-output-hk/iohk-monitoring-framework
-- bug-reports:
license:             Apache-2.0
license-files:       LICENSE, NOTICE
author:              Alexander Diemand
maintainer:          operations@iohk.io
copyright:           2019 IOHK
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md

flag systemd
  Description: Enable systemd support
  Default:     True
  Manual:      False

library

  if os(linux) && flag(systemd)
    cpp-options:       -DSYSTEMD

  exposed-modules:     Cardano.BM.Scribe.Systemd
  -- other-modules:
  -- other-extensions:
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.11,
                       iohk-monitoring,
                       aeson,
                       bytestring,
                       katip,
                       text,
                       template-haskell,
                       unordered-containers
  if os(windows)
     build-depends:    Win32
  else
     build-depends:    unix

  if os(linux)
     build-depends:    hsyslog
  
  if os(linux) && flag(systemd)
     build-depends:
                       libsystemd-journal

  hs-source-dirs:      src
  default-language:    Haskell2010
